Fixed app view on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body {
 }
 
 .app {
-    width: 100%;
+    /* width: 100%; */
     max-width: 500px;
     border-radius: 22px;
 }
